style: melhorando estilo da notificação

--- a/manga_fe/src/assets/main.css
+++ b/manga_fe/src/assets/main.css
@@ -22,7 +22,7 @@ main {
     flex-direction: column;
 }
 
-main > * {
+main>* {
     width: 100%;
     max-width: 100%;
     box-sizing: border-box;
@@ -108,4 +108,19 @@ main .container-video video {
         margin-left: var(--menu-margin-left);
         width: calc(100% - var(--menu-margin-left));
     }
+}
+
+.n-notification {
+    background-color: #2e2e2e !important;
+    border-radius: 14px !important;
+    border: 1px solid #444 !important;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25) !important;
+}
+
+.n-notification__title {
+    color: #f3f3f3 !important;
+}
+
+.n-notification__meta {
+    color: #c4c4c4 !important;
 }
